# POO-21-22

./: CMakeLists.txt  executarF.txt  main.cpp
inc/: Edificio.h  Ferro.h  Ilha.h  Interface.h  Menus.h  MinaFerro.h  Mineiro.h  Recurso.h  Trabalhador.h  Zona.h  utils.h
src/: Edificio.cpp  Ferro.cpp  Ilha.cpp  Interface.cpp  Menus.cpp  MinaFerro.cpp  Mineiro.cpp  Recurso.cpp  Trabalhador.cpp  Zona.cpp  utils.cpp
